# woodhouse

./: CMakeLists.txt  README.md  latest_scan_context.csv  package.xml
CAD/: 100MMshockLower.ipt  100MMshockUpper.ipt  10inStrut.ipt  125 mm Bike Rear Shock Absorber.step  12inStrut.ipt  47065T209_T-Slotted Framing.STEP  4844N105_T-Slotted Framing Structural Bracket.STEP  4844N132_T-Slotted Framing Structural Bracket.STEP  50W 2Ohm Power Resistor.step  5mmAdapter.ipt  5mmAdapter.stp  6082rsBearing.ipt  6495K814_Timing Belt Pulley.STEP  6495K821_Timing Belt Pulley.STEP  6495K822_Timing Belt Pulley.STEP  6pt9inStrut.ipt  6pt9inStrut.stp  86-0138 REV 2, ENVELOPE, VLP-32C M12M.STEP  9002T445_Corrosion-Resistant Precision Compression Springs.STEP  90237A130_High-Strength Steel Nylon-Insert Locknuts.STEP  90453A115_Low-Profile Nylon-Insert Locknuts.STEP  91290A270_Alloy Steel Socket Head Screw.STEP  91290A442_Alloy Steel Socket Head Screw.STEP  91290A461_Alloy Steel Socket Head Screw.STEP  92981A203_Alloy Steel Shoulder Screws.STEP  93070A175_Alloy Steel Low-Profile Socket Head Screw.STEP  94645A210_High-Strength Steel Nylon-Insert Locknut.STEP  BOARD.ipt  E-STOP.STEP  KEYBOARD.ipt  LAPTOP.iam  MONITOR.ipt  Motor driver ODRIVE V3.6.stp  Motor, BLDC, Hoverboard Wheel, 6.5in.igs  Motor, BLDC, Hoverboard Wheel, 6.5in.x_t  Zippy5000.ipt  am-3298a 20 tooth Molded Tank Pulley Half Rev4.STEP  am3298_bearing_adapter.ipt  am3298_bearing_adapter.stl  b link.ipt  (+123 more)
config/: joy_config.yaml
include/scancontext/: Scancontext.h
msg/: GetTheseClouds.msg  HereAreTheClouds.msg  KeyframeData.msg  KeyframePoses.msg  LoopClosed.msg
notebooks/: GTSAM_crash_debug.py  GTSAM_simple_demo.ipynb  keyframe_0.csv  keyframe_1.csv  keyframe_10.csv  keyframe_100.csv  keyframe_101.csv  keyframe_102.csv  keyframe_103.csv  keyframe_104.csv  keyframe_105.csv  keyframe_106.csv  keyframe_107.csv  keyframe_108.csv  keyframe_109.csv  keyframe_11.csv  keyframe_110.csv  keyframe_111.csv  keyframe_112.csv  keyframe_113.csv  keyframe_114.csv  keyframe_115.csv  keyframe_116.csv  keyframe_117.csv  keyframe_118.csv  keyframe_119.csv  keyframe_12.csv  keyframe_120.csv  keyframe_121.csv  keyframe_122.csv  keyframe_123.csv  keyframe_124.csv  keyframe_125.csv  keyframe_126.csv  keyframe_127.csv  keyframe_128.csv  keyframe_129.csv  keyframe_13.csv  keyframe_130.csv  keyframe_131.csv  (+178 more)
notebooks/.ipynb_checkpoints/: GTSAM_simple_demo-checkpoint.ipynb  loop_closure-checkpoint.ipynb
notebooks/apartment/: keyframe_1.csv  keyframe_10.csv  keyframe_100.csv  keyframe_101.csv  keyframe_102.csv  keyframe_103.csv  keyframe_104.csv  keyframe_105.csv  keyframe_106.csv  keyframe_107.csv  keyframe_108.csv  keyframe_109.csv  keyframe_110.csv  keyframe_111.csv  keyframe_113.csv  keyframe_114.csv  keyframe_115.csv  keyframe_116.csv  keyframe_119.csv  keyframe_12.csv  keyframe_120.csv  keyframe_121.csv  keyframe_122.csv  keyframe_123.csv  keyframe_125.csv  keyframe_126.csv  keyframe_127.csv  keyframe_129.csv  keyframe_13.csv  keyframe_131.csv  keyframe_132.csv  keyframe_133.csv  keyframe_134.csv  keyframe_137.csv  keyframe_140.csv  keyframe_141.csv  keyframe_143.csv  keyframe_146.csv  keyframe_147.csv  keyframe_149.csv  (+65 more)
src/: Scancontext.cpp  cmd_vel_to_odrive.py  gps_logger.py  keyframe_grabber.py  loop_closer.cpp  loop_closer_eigen.cpp  pose_graph.cpp  scan_context_keyframe_grabber.cpp
